<resources>
    <string name="app_name">NewsApplication</string>
    <string name="menu_item_headlines">Headlines</string>
    <string name="menu_item_saved">Saved</string>
    <string name="menu_item_sources">Sources</string>
    <string name="top_text_headlines">News APP</string>
    <string name="top_text_filrers">Filters</string>
    <string name="top_text_sources">Sources</string>
    <string name="top_text_saved">Saved</string>
    <string name="headlines_page_general">General</string>
    <string name="headlines_page_business">Business</string>
    <string name="headlines_page_traveling">Traveling</string>
    <string name="description_news">%1$s\n%2$s\n%3$s</string>
    <string name="source_description">%1$s | %2$s</string>
    <string name="internet_error">No internet connection</string>
    <string name="other_error">Something went wrong\nTry later</string>
    <string name="refresh_button">Refresh</string>
    <string name="error_content_news">We can\'t display the content right now.\nTry later</string>
    <string name="button_back_description_image">image for button back</string>
    <string name="error_description_image">image of error</string>
    <string name="button_refresh_description_image">image for button refresh</string>
    <string name="button_save_description_image">image for button save</string>
    <string name="empty_news_description_image">image for empty news</string>
    <string name="image_news_description">image from news</string>
    <string name="image_source_description">image for source</string>
    <string name="button_clear_description_image">image for button clear</string>
    <string name="sort_popular_text">Popular</string>
    <string name="sort_new_text">New</string>
    <string name="sort_relevant_text">Relevant</string>
    <string name="date_text">Date</string>
    <string name="choose_date_text">Choose date</string>
    <string name="language_text">Language</string>
    <string name="russian_language_text">Русский</string>
    <string name="english_language_text">English</string>
    <string name="deutsch_language_text">Deutsch</string>
    <string name="btn_choose_date_description">image for choose date</string>
    <string name="filter_date">%1$s-%2$s</string>
</resources>